fixed home page content box positioning on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -69,7 +69,7 @@ body {
   background: rgba(42, 42, 42, 0.7); }
   @media (max-width: 831px) {
     .home-template .content {
-      top: 65%;
+      top: 360px;
       width: 90%; } }
   .home-template .content .clearfix {
     padding: 10px 40px; }
