--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -18,7 +18,7 @@
         background: rgba(42, 42, 42, .7);
         // Mobile
         @media(max-width: 831px) {
-            top: 65%;
+            top: 360px;
             width: 90%;
         }
         .clearfix {
